# Saas-Poly

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  alembic.ini  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  track-progress.yml
_prior_bot/: README.md
_prior_bot/poly_terminal/: main.py
_prior_bot/poly_terminal/bus/: event_bus.py  events.py
_prior_bot/poly_terminal/config/: fingerprint.py  preset_loader.py  settings.py
_prior_bot/poly_terminal/data/: latency_budget.py
_prior_bot/poly_terminal/persistence/: db.py
_prior_bot/poly_terminal/research/: backtest_dataset_builder.py  execution_replay.py  falcon_client.py  falcon_market_loader.py  falcon_trades_loader.py  fill_simulator.py  (+4 more)
apps/api/: main.py
docs/ADRs/: 0001-pin-py-clob-client.md  0002-dev-secrets-backend.md
infra/compose/: docker-compose.dev.yml
infra/docker/: api.Dockerfile
services/execution/: __init__.py  engine.py  heartbeat.py  paper_filler.py
services/reconciliation/: __init__.py  engine.py  position_math.py
services/risk_engine/: __init__.py  context.py  engine.py
shared/config/: settings.py
shared/db/: models.py
shared/domain/: __init__.py  fills.py  intents.py  positions.py  signals.py
shared/events/: __init__.py  bus.py
shared/polymarket/: __init__.py  decimal_helpers.py  gamma.py
shared/risk_primitives/: __init__.py  gamma_slug_builder.py  percent_sltp.py  tick_confirmation.py
shared/telemetry/: __init__.py  gate_decisions.py  metrics.py
strategies/_base/: __init__.py  strategy.py
tests/unit/: test_domain_smoke.py
(+224 files in other folders)
