[project]
name = "saas-poly"
version = "0.1.0"
description = "Polymarket Trading Infrastructure Platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2",
    "redis>=5.1,<6",
    "py-clob-client==0.21.0",
    "httpx>=0.27,<0.28",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "types-redis",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "strategies*", "shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["_prior_bot", "shared/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["shared", "services", "apps"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
